refactored tab generation, fixed layout issues
Former-commit-id: cd3660f2e5de7fc3227544cb46864ca4e3b90e0d [formerly ed155e75e3826733bdfa0efed1f0efc2a43fdb76] [formerly 8f960c420739fbfae57cde4489c097615479ea1f [formerly 96620d457bc54067890e3590d69e54dc3fd0905b]]
Former-commit-id: df18af2e3c1b27442b48f20b3ff5d06cfe918151 [formerly 967275b033fdb2c024e48a0a212073475a579b09]
Former-commit-id: f385a15a5f8e4c34d229d48d549591a4a57b635a

--- a/war/LangTest.css
+++ b/war/LangTest.css
@@ -217,6 +217,9 @@ h1 {
 .inlineStyle {
     display: inline-block;
 }
+.trueInlineStyle {
+     display: inline;
+ }
 
 .buttonMargin {
     margin-right: 3px;
